# openapi.yaml
@@ -3,8 +3,390 @@
 
 openapi: 3.0.3
 info:
-    title: ""
+    title: Area API
     version: 0.0.1
-paths: {}
+paths:
+    /area:
+        post:
+            tags:
+                - Area
+            operationId: Area_CreateArea
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/CreateAreaRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/CreateAreaReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /area/delete:
+        delete:
+            tags:
+                - Area
+            operationId: Area_DeleteArea
+            parameters:
+                - name: id
+                  in: query
+                  schema:
+                    type: integer
+                    format: uint64
+                - name: ids
+                  in: query
+                  schema:
+                    type: array
+                    items:
+                        type: integer
+                        format: uint64
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/DeleteAreaReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /area/list:
+        get:
+            tags:
+                - Area
+            operationId: Area_ListArea
+            parameters:
+                - name: parentId
+                  in: query
+                  schema:
+                    type: integer
+                    format: uint64
+                - name: regionId
+                  in: query
+                  schema:
+                    type: string
+                - name: level
+                  in: query
+                  schema:
+                    type: integer
+                    format: int32
+                - name: kw
+                  in: query
+                  schema:
+                    type: string
+                - name: order
+                  in: query
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/ListAreaReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /area/list/cascade/:id:
+        get:
+            tags:
+                - Area
+            operationId: Area_CascadeListArea
+            parameters:
+                - name: id
+                  in: query
+                  schema:
+                    type: integer
+                    format: uint64
+                - name: regionId
+                  in: query
+                  schema:
+                    type: string
+                - name: level
+                  in: query
+                  schema:
+                    type: integer
+                    format: int32
+                - name: deep
+                  in: query
+                  schema:
+                    type: integer
+                    format: int32
+                - name: kw
+                  in: query
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/CascadeListAreaReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /area/view:
+        get:
+            tags:
+                - Area
+            operationId: Area_GetArea
+            parameters:
+                - name: id
+                  in: query
+                  schema:
+                    type: integer
+                    format: uint64
+                - name: regionId
+                  in: query
+                  schema:
+                    type: string
+                - name: level
+                  in: query
+                  schema:
+                    type: integer
+                    format: uint32
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/GetAreaReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /area/{id}:
+        put:
+            tags:
+                - Area
+            operationId: Area_UpdateArea
+            parameters:
+                - name: id
+                  in: path
+                  required: true
+                  schema:
+                    type: integer
+                    format: uint64
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/UpdateAreaRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/UpdateAreaReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
 components:
-    schemas: {}
+    schemas:
+        CascadeListAreaReply:
+            type: object
+            properties:
+                items:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/CascadeListAreaReply_Item'
+                parent:
+                    $ref: '#/components/schemas/CascadeListAreaReply_Item'
+        CascadeListAreaReply_Item:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    format: uint64
+                regionId:
+                    type: string
+                title:
+                    type: string
+                lat:
+                    type: number
+                    format: float
+                lng:
+                    type: number
+                    format: float
+                ucfirst:
+                    type: string
+                pinyin:
+                    type: string
+                level:
+                    type: integer
+                    format: uint32
+                items:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/CascadeListAreaReply_Item'
+        CreateAreaReply:
+            type: object
+            properties: {}
+        CreateAreaRequest:
+            type: object
+            properties:
+                parentId:
+                    type: integer
+                    format: uint64
+                regionId:
+                    type: string
+                title:
+                    type: string
+                lat:
+                    type: number
+                    format: float
+                lng:
+                    type: number
+                    format: float
+                cityCode:
+                    type: string
+                zipCode:
+                    type: string
+        DeleteAreaReply:
+            type: object
+            properties: {}
+        GetAreaReply:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    format: uint64
+                regionId:
+                    type: string
+                title:
+                    type: string
+                lat:
+                    type: number
+                    format: float
+                lng:
+                    type: number
+                    format: float
+                ucfirst:
+                    type: string
+                pinyin:
+                    type: string
+                cityCode:
+                    type: string
+                zipCode:
+                    type: string
+                level:
+                    type: integer
+                    format: uint32
+                createTime:
+                    type: integer
+                    format: uint64
+                updateTime:
+                    type: integer
+                    format: uint64
+                parent:
+                    $ref: '#/components/schemas/GetAreaReply'
+        GoogleProtobufAny:
+            type: object
+            properties:
+                '@type':
+                    type: string
+                    description: The type of the serialized message.
+            additionalProperties: true
+            description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
+        ListAreaReply:
+            type: object
+            properties:
+                items:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/ListAreaReply_Item'
+        ListAreaReply_Item:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    format: uint64
+                regionId:
+                    type: string
+                title:
+                    type: string
+                ucfirst:
+                    type: string
+                pinyin:
+                    type: string
+                cityCode:
+                    type: string
+                zipCode:
+                    type: string
+                level:
+                    type: integer
+                    format: uint32
+                updateTime:
+                    type: integer
+                    format: uint64
+        Status:
+            type: object
+            properties:
+                code:
+                    type: integer
+                    description: The status code, which should be an enum value of [google.rpc.Code][google.rpc.Code].
+                    format: int32
+                message:
+                    type: string
+                    description: A developer-facing error message, which should be in English. Any user-facing error message should be localized and sent in the [google.rpc.Status.details][google.rpc.Status.details] field, or localized by the client.
+                details:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/GoogleProtobufAny'
+                    description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
+            description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
+        UpdateAreaReply:
+            type: object
+            properties: {}
+        UpdateAreaRequest:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    format: uint64
+                parentId:
+                    type: integer
+                    format: uint64
+                regionId:
+                    type: string
+                title:
+                    type: string
+                lat:
+                    type: number
+                    format: float
+                lng:
+                    type: number
+                    format: float
+                cityCode:
+                    type: string
+                zipCode:
+                    type: string
+tags:
+    - name: Area
